# drifter

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  paraviewmacro.py
.github/workflows/: ci.yml  nightly.yml
config/: example.json
docs/: cg_bezier_solver_verification.md  cg_bezier_uniform_evaluation.md  cg_cubic_bezier_uniform_evaluation.md  regenerate_figures.sh  uniform_vs_adaptive_convergence.md
include/: drifter.hpp
include/amr/: refinement.hpp
include/bathymetry/: adaptive_bathymetry.hpp  adaptive_bezier_smoother.hpp  adaptive_cg_bezier_smoother.hpp  adaptive_cg_bezier_smoother_base.hpp  adaptive_cg_cubic_bezier_smoother.hpp  adaptive_cg_linear_bezier_smoother.hpp  adaptive_smoother_types.hpp  bezier_basis_2d.hpp  bezier_basis_2d_base.hpp  bezier_bathymetry_smoother.hpp  bezier_c2_constraints.hpp  bezier_data_fitting.hpp  bezier_hessian_base.hpp  bezier_hierarchical_solver.hpp  bezier_multigrid_preconditioner.hpp  bezier_multigrid_solver.hpp  biharmonic_assembler.hpp  block_diag_approx_cg_schur_preconditioner.hpp  cg_bathymetry_smoother.hpp  cg_bezier_bathymetry_smoother.hpp  cg_bezier_dof_manager.hpp  cg_bezier_dof_manager_base.hpp  cg_bezier_smoother_base.hpp  cg_cubic_bezier_bathymetry_smoother.hpp  cg_cubic_bezier_dof_manager.hpp  cg_dof_manager.hpp  cg_linear_bezier_bathymetry_smoother.hpp  cg_linear_bezier_dof_manager.hpp  cg_triharmonic_bezier_bathymetry_smoother.hpp  constraint_condenser.hpp  cubic_bezier_basis_2d.hpp  cubic_thin_plate_hessian.hpp  diagonal_approx_cg_schur_preconditioner.hpp  diagonal_schur_preconditioner.hpp  dirichlet_hessian.hpp  flexible_cg.hpp  gauss_seidel_schur_preconditioner.hpp  iterative_method.hpp  iterative_method_factory.hpp  iterative_solver.hpp  (+18 more)
include/core/: config_reader.hpp  drifter.hpp  enum_strings.hpp  scoped_timer.hpp  types.hpp
include/dg/: basis.hpp  basis_hexahedron.hpp  bernstein_basis.hpp  face_connection.hpp  mortar.hpp  nonconforming_projection.hpp  operators_3d.hpp  quadrature_3d.hpp
include/flux/: numerical_flux.hpp
include/io/: bathymetry_vtk_writer.hpp  matrix_market_writer.hpp  vtk_writer.hpp  zarr_writer.hpp
include/mesh/: area_of_interest.hpp  coastline_refinement.hpp  element.hpp  geotiff_reader.hpp  morton.hpp  multi_source_bathymetry.hpp  octree_adapter.hpp  refine_mask.hpp  seabed_surface.hpp  sigma_coordinate.hpp  vertical_tfi.hpp
include/parallel/: domain_decomposition.hpp  halo_exchange.hpp
include/physics/: equation_of_state.hpp  mode_splitting.hpp  pressure_gradient.hpp  primitive_equations.hpp  shallow_water.hpp  vertical_velocity.hpp
include/solver/: simulation_driver.hpp  time_stepper.hpp
scr/: generate_report.py  iterative_methods.py  number_of_levels.py  plot_matrix_sparsity.py  plot_synthetic_bathymetry.py  pyproject.toml  solver_scaling.py  solver_verification.py  surface_plots.py
scripts/: plot_adaptive_errors.py
src/: main.cpp
src/amr/: coarsening.cpp  error_estimator.cpp  load_balancer.cpp  refinement.cpp
src/bathymetry/: adaptive_bathymetry.cpp  adaptive_bezier_smoother.cpp  adaptive_cg_bezier_smoother.cpp  adaptive_cg_bezier_smoother_base.cpp  adaptive_cg_cubic_bezier_smoother.cpp  adaptive_cg_linear_bezier_smoother.cpp  bezier_basis_2d.cpp  bezier_bathymetry_smoother.cpp  bezier_c2_constraints.cpp  bezier_data_fitting.cpp  bezier_hierarchical_solver.cpp  bezier_multigrid_preconditioner.cpp  bezier_multigrid_solver.cpp  biharmonic_assembler.cpp  block_diag_approx_cg_schur_preconditioner.cpp  cg_bathymetry_smoother.cpp  cg_bezier_bathymetry_smoother.cpp  cg_bezier_dof_manager.cpp  cg_bezier_dof_manager_base.cpp  cg_bezier_smoother_base.cpp  cg_cubic_bezier_bathymetry_smoother.cpp  cg_cubic_bezier_dof_manager.cpp  cg_dof_manager.cpp  cg_linear_bezier_bathymetry_smoother.cpp  cg_linear_bezier_dof_manager.cpp  cg_triharmonic_bezier_bathymetry_smoother.cpp  constraint_condenser.cpp  cubic_bezier_basis_2d.cpp  cubic_thin_plate_hessian.cpp  diagonal_approx_cg_schur_preconditioner.cpp  diagonal_schur_preconditioner.cpp  dirichlet_hessian.cpp  flexible_cg.cpp  gauss_seidel_schur_preconditioner.cpp  iterative_method_factory.cpp  iterative_solver.cpp  jacobi_method.cpp  lagrange_basis_2d.cpp  linear_bezier_basis_2d.cpp  multigrid_schur_preconditioner.cpp  (+11 more)
tests/: CMakeLists.txt  synthetic_bathymetry.hpp  test_utils.hpp
tests/benchmarks/: test_convergence_comparison.cpp  test_solver_scaling.cpp
tests/integration/: test_adaptive_bezier_smoother.cpp  test_adaptive_cg_bezier_smoother.cpp  test_adaptive_cg_cubic_bezier_smoother.cpp  test_adaptive_cg_cubic_bezier_solver_comparison.cpp  test_adaptive_cg_linear_bezier_smoother.cpp  test_bathymetry.cpp  test_bezier_bathymetry_smoother.cpp  test_cg_bathymetry_smoother.cpp  test_cg_bezier_bathymetry_smoother.cpp  test_cg_cubic_bezier_bathymetry_smoother.cpp  test_cg_cubic_bezier_solver_comparison.cpp  test_cg_linear_bezier_bathymetry_smoother.cpp  test_cg_triharmonic_bezier_bathymetry_smoother.cpp  test_conservation.cpp  test_dg_operators.cpp  test_hierarchical_solver.cpp  test_initial_conditions.cpp  test_integration_fixtures.hpp  test_mesh.cpp  test_multi_source_bathymetry.cpp  test_simulation.cpp  test_simulation_full.cpp  test_standalone_iterative_methods.cpp  test_thb_surface.cpp  test_time_stepping.cpp  test_uniform_vs_adaptive_convergence.cpp  test_vtk_output.cpp
tests/mpi/: test_domain_decomposition.cpp  test_halo_exchange.cpp
tests/tools/: test_matrix_sparsity.cpp
tests/unit/: test_adaptive_bathymetry.cpp  test_amr.cpp  test_area_of_interest.cpp  test_basis_hexahedron.cpp  test_bezier_basis_2d.cpp  test_bezier_multigrid.cpp  test_biharmonic_assembler.cpp  test_bspline_basis.cpp  test_cg_dof_manager.cpp  test_equation_of_state.cpp  test_hierarchical_solver.cpp  test_io.cpp  test_mode_splitting.cpp  test_mortar.cpp  test_numerical_flux.cpp  test_quadrature_3d.cpp  test_quadtree_adapter.cpp  test_quintic_basis_2d.cpp  test_schur_preconditioner.cpp  test_seabed_surface.cpp  test_sigma_coordinate.cpp  test_thin_plate_hessian.cpp  test_time_stepper.cpp  test_wavelet_pyramid.cpp  test_weno_sampler.cpp
(+69 files in other folders)
